11/01/2012:

- VNX:
     - changed argument processing to simplify it using a hash to store arguments (%opts)

- EDIV:
     - Added show-map, clean-cluster, seg-info and seg-alg-info new options
     - Created @cluster_active_hosts new array to store active hosts
     - Implemented -M as a comma separated list of vms
     - changed argument processing to simplify it using a hash to store arguments (%opts)

- Changed ifconfig and route commands to use ip instead. Commands:
     - Activate interface: ip link set eth1 up
     - Add address: ip addr add 2001::2/64 dev br0
     - Delete address: ip addr del 2001::2/64 dev br0
     - Add route: ip -4 add route 10.1.1.0/24 via 10.1.1.1
     - Delete route: ip -4 del route 10.1.1.0/24 via 10.1.1.1

- Added -v (verbose) and -i (copy new version to idefix repository) to build_tar* scripts
- Changed all ifconfig xx 0.0.0.0 up commands by "ip link set xx up"
.....
.....

16/9/2011

- Changed the format of multiple sequences form space-separated to comma-separated list. Ej:
        seq="on_boot, start"         
        
- Changes in make-iso script (not finished)     


12/9/2011:

- Plugins: 
    + changed OSPF and DHCP plugins to use XML::LibXML instead of XML::DOM
    + added a new function to plugin API: getSeqDescriptions to get descriptions of commands offered by plugins
    + changes to OSPF and DHCP configuration files languages. DTD's translated to XSD.
    + plog function to write log messages in plugins 
    
- vnx:
    + added a new option --exe-info to get a description of the commands available in a virtual scenario. 
      For the plugin commands, the information is obtained by menas of the new function getSeqDescriptions.
      For the user-defined commands, a new tag has been added <seq_help>:
      
        <help>
             <seq_help seq='start-www'>Start apache2 web server</seq_help>
             <seq_help seq='stop-www'>Stop apache2 web server</seq_help>     
        </help>